# xiaoy_mdhub

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.bmad-core/: core-config.yml  install-manifest.yml
.github/workflows/: ci-cd.yml
apps/api/: .env.example  Dockerfile  Makefile  __init__.py  alembic.ini  logging_config.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  system_monitor_optimizer.py
apps/api/alembic/: env.py
apps/api/app/: app.py
apps/api/app/api/: routes.py
apps/api/app/api/routes/: health.py  websocket.py
apps/api/app/config/: database.py  performance_thresholds.py
apps/api/app/gateways/: __init__.py
apps/api/app/models/: __init__.py  health_status.py  market_data_account.py
apps/api/app/routes/: accounts.py  trading_time.py
apps/api/app/services/: account_validation_service.py  database_service.py  event_bus.py  gateway_manager.py  gateway_recovery_service.py  health_monitor.py  quote_aggregation_engine.py  real_gateway_validator.py  trading_time_manager.py  validation_worker.py  websocket_log_handler.py  websocket_manager.py  zmq_publisher.py
apps/api/app/utils/: timezone.py
apps/api/scripts/: add_test_accounts.py  system_health_test.py  test_websocket.py  test_zmq_subscriber.py
apps/api/tests/: __init__.py  conftest.py
apps/api/tests/fixtures/: __init__.py
apps/api/tests/integration/: test_accounts_api.py  test_canary_integration.py  test_canary_simple.py  test_database_operations.py  test_error_handling.py  test_gateway_recovery_service.py  test_service_startup.py
apps/api/tests/load/: __init__.py  test_extreme_performance.py
apps/api/tests/performance/: __init__.py  test_baseline_performance.py  test_database_performance.py  test_performance_validation.py
apps/api/tests/unit/: test_event_bus.py  test_gateway_manager.py  test_gateway_recovery_service.py  test_health_monitor.py  test_quote_aggregation_engine.py  test_type_consistency.py  test_websocket_manager.py
apps/web/: .env.example  Dockerfile  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/__tests__/: README.md  account-management.test.tsx
apps/web/__tests__/components/dashboard/: gateway-controls.test.tsx
apps/web/__tests__/dashboard/: dashboard-integration.test.tsx  gateway-controls-integration.test.tsx
apps/web/__tests__/hooks/: use-dashboard-data-canary-simple.test.ts  use-dashboard-data-canary.test.ts
apps/web/__tests__/logs/: log-entry.test.tsx  log-filter.test.tsx  log-viewer-integration.test.tsx
apps/web/__tests__/services/: gateway-service.test.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/accounts/: page.tsx
apps/web/src/app/logs/: page.tsx
apps/web/src/components/: TradingTimeStatus.tsx  account-create-modal.tsx  account-delete-dialog.tsx  account-edit-modal.tsx  account-form.tsx  account-list.tsx  accounts-management.tsx  connection-status.tsx  error-boundary.tsx
apps/web/src/components/dashboard/: canary-monitor.tsx  gateway-control-dialog.tsx  gateway-controls.tsx  gateway-status-card.tsx  system-health-summary.tsx
apps/web/src/components/logs/: log-entry.tsx  log-filter.tsx  log-viewer.tsx
apps/web/src/hooks/: use-accounts.ts  use-connection-status.ts  use-dashboard-data.ts  use-log-viewer.ts
apps/web/src/services/: account-service.ts  api-client.ts  api.ts  gateway-service.ts  tradingTimeService.ts  websocket.ts
apps/web/src/services/__tests__/: account-service.test.ts
apps/web/src/store/: app-store.ts  gateway-store.ts  index.ts  log-store.ts
docs/: account-management-crud-plan.md  front-end-spec.md  fullstack-architechture.md  fullstack-integration-architecture.md  prd.md  project_brief.md  reminder.md
docs/architecture/: 01-fullstack-architecture-local-high-availability-market-data-hub.md  02-1-introduction.md  03-2-high-level-architecture.md  04-3-tech-stack.md  05-4-data-models.md  06-5-api-specification-rest.md  07-6-core-workflows.md  08-7-database-schema.md  09-8-unified-project-structure-monorepo.md  10-9-deployment-architecture.md  11-10-coding-standards.md  12-11-checklist-results-report.md
docs/deployment/: production-deployment-guide.md
docs/prd/: 01-product-requirements-document-local-high-availability-market-data-hub.md  02-1-goals-and-background-context.md  03-2-requirements.md  04-3-user-interface-design-goals.md  05-4-technical-assumptions.md  06-5-epics.md  07-6-checklist-results-report.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  3.1.story.md  3.2.story.md  3.3.story.md  4.1.story.md  4.2.story.md  4.3.story.md  4.4.story.md  story-1-1-project-scaffolding.md
scripts/: install-dev.sh  install-vnpy-deps.sh  install-vnpy.sh  quick-validation.sh  start-services.sh  stop-services.sh
